style.css
#calculator{
    width:400px;
    height:600px;
    background-color: #61A5C2;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 20px;
    border: 10px solid #012A4A;
    border-radius: 30px;

    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
}

#screen{
    padding: 20px;
    width: auto;
    height: 60px;
    background-color: #A9D6E5;
    border: 3px solid #012A4A;
    border-radius: 20px;

    font-size: 55px;
    font-weight: bold;

    display: flex;
    justify-content: center;
    align-items: center;
}

#display{
    margin-left: 320px;
}

#clear-delete{
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
}
#clear{
    color: #012A4A;
    width: 40%;
    height: 40px;
    background-color: white;
    font-weight: bolder;
    font-size: larger;
    border: 4px solid #012A4A;
    border-radius: 20px;
}
#delete{
    color: #012A4A;
    width: 40%;
    height: 40px;
    background-color: white;
    font-weight: bolder;
    font-size: larger;
    border: 4px solid #012A4A;
    border-radius: 20px;
}


#numpad{
    display: grid;
    grid-gap: 5px;
    grid-template-columns: repeat(4,auto);
    grid-template-rows: repeat(4,auto);
}

.numpad{
    height: 96px;
    color: #012A4A;
    background-color: white;
    font-weight: bolder;
    font-size: 24px;
    border: 3px solid #012A4A;
    border-radius: 50%;
}

.operator{
    background-color: white;
    font-weight: bolder;
    font-size: 35px;
    border: 3px solid #012A4A;
    color: #61A5C2;
    border-radius: 50%;
}

#btn-equals{
    background-color: #2A6F97;
    color: white;
    font-size: 35px;
    font-weight: bolder;
    font-size: 24px;
    border: 3px solid #012A4A;
    border-radius: 50%;
}

.numpad:active, .operator:active{
    background-color: #A9D6E5;
}

#btn-equals:active{
    background-color: #A9D6E5;
    animation-duration: 0.5s;
}

#clear:active, #delete:active{
    background-color: #A9D6E5;
}

#linkGithub{
    font-size: larger;
    font-weight: bolder;
    margin-top: 800px;
}

#aaa{
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-60%, -60%);
}

